--- a/index.html
+++ b/index.html
@@ -555,74 +555,103 @@
   // 👇 Сделать доступной из HTML
   window.addElementRow = addElementRow;
 
-  function submitForm() {
-    const form = document.getElementById("form");
-    const pdfPreview = document.getElementById("pdf-preview");
-    const email = form.email.value;
-    const material = form.material.value;
+ function submitForm() {
+  const form = document.getElementById("form");
+  const pdfPreview = document.getElementById("pdf-preview");
+  const email = form.email.value;
+  const material = form.material.value;
 
-    if (!email) return alert("Введите email");
+  if (!email) return alert("Введите email");
 
-    const content = generatePrintableContent(form, material);
+  // 👇 Показываем нужную секцию (на всякий случай)
+  showAnalyzerSection(material);
 
-    const tempContainer = document.createElement("div");
-tempContainer.style.position = "fixed";
-tempContainer.style.top = "-9999px";
-tempContainer.appendChild(content);
-document.body.appendChild(tempContainer);
+  // 👇 Клонировать не будем. Просто создадим временный div
+  const clone = form.cloneNode(true);
 
-    html2pdf().set({
-      html2canvas: { scale: 2, useCORS: true },
-      jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-    }).from(content).output('datauristring')
-      .then(dataUri => {
-        pdfPreview.src = dataUri;
-        pdfPreview.style.display = "block";
-        return html2pdf().set({
-          filename: 'oprosny_list.pdf',
-          html2canvas: { scale: 2, useCORS: true },
-          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-        }).from(content).outputPdf('blob');
-      })
-      .then(blob => {
+  // Удалим кнопки
+  clone.querySelectorAll("button").forEach(btn => btn.remove());
 
-        // Удаляем временный контейнер после создания PDF
-        document.body.removeChild(tempContainer);
+  // Заменим input/select/textarea на текст
+  clone.querySelectorAll("input, select, textarea").forEach(el => {
+    const span = document.createElement("div");
+    span.style.marginBottom = "4px";
+    if (el.type === "checkbox") {
+      span.textContent = el.checked ? "✔ Да" : "— Нет";
+    } else if (el.type === "file") {
+      span.textContent = ""; // изображения отдельно
+    } else {
+      span.textContent = el.value || "—";
+    }
+    el.replaceWith(span);
+  });
 
-        
-        const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
-        const formData = new FormData();
-        formData.append("file", file);
-        return fetch("https://tmpfiles.org/api/v1/upload", {
-          method: "POST",
-          body: formData
-        });
-      })
-      .then(res => res.json())
-      .then(data => {
-        if (!data || !data.data || !data.data.url) throw new Error("Не удалось получить ссылку на PDF");
-        const templateParams = {
-          to: `${email}, science.techade@gmail.com`,
-          email: email,
-          company: form.company.value,
-          date: form.date.value,
-          contact_person: form.contact_person.value,
-          phone: form.phone.value,
-          country: form.country.value,
-          location: form.location.value,
-          material: material,
-          subject: "Новый опросный лист",
-          time: new Date().toLocaleString(),
-          pdf_link: data.data.url
-        };
-        return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
-      })
-      .then(() => alert("Форма отправлена. Ссылка на PDF отправлена по email."))
-      .catch(err => {
-        console.error("Ошибка при отправке:", err);
-        alert("Ошибка: " + (err.message || err));
-      });
+  // Добавим изображение
+  const photoInput = document.getElementById(`installation_photo_${material}`);
+  const jpegData = photoInput?.dataset?.jpeg;
+  if (jpegData) {
+    const img = document.createElement("img");
+    img.src = jpegData;
+    img.style.maxWidth = "100%";
+    img.style.marginTop = "10px";
+    clone.appendChild(img);
   }
+
+  // Добавим клон во временный контейнер в DOM
+  const tempContainer = document.createElement("div");
+  tempContainer.style.position = "fixed";
+  tempContainer.style.top = "-9999px";
+  tempContainer.appendChild(clone);
+  document.body.appendChild(tempContainer);
+
+  html2pdf().set({
+    html2canvas: { scale: 2, useCORS: true },
+    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+  }).from(clone).output('datauristring')
+    .then(dataUri => {
+      pdfPreview.src = dataUri;
+      pdfPreview.style.display = "block";
+      return html2pdf().set({
+        filename: 'oprosny_list.pdf',
+        html2canvas: { scale: 2, useCORS: true },
+        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+      }).from(clone).outputPdf('blob');
+    })
+    .then(blob => {
+      document.body.removeChild(tempContainer);
+      const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
+      const formData = new FormData();
+      formData.append("file", file);
+      return fetch("https://tmpfiles.org/api/v1/upload", {
+        method: "POST",
+        body: formData
+      });
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (!data || !data.data || !data.data.url) throw new Error("Не удалось получить ссылку на PDF");
+      const templateParams = {
+        to: `${email}, science.techade@gmail.com`,
+        email: email,
+        company: form.company.value,
+        date: form.date.value,
+        contact_person: form.contact_person.value,
+        phone: form.phone.value,
+        country: form.country.value,
+        location: form.location.value,
+        material: material,
+        subject: "Новый опросный лист",
+        time: new Date().toLocaleString(),
+        pdf_link: data.data.url
+      };
+      return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
+    })
+    .then(() => alert("Форма отправлена. Ссылка на PDF отправлена по email."))
+    .catch(err => {
+      console.error("Ошибка при отправке:", err);
+      alert("Ошибка: " + (err.message || err));
+    });
+}
 </script>
 
 
