--- a/index.html
+++ b/index.html
@@ -418,7 +418,9 @@
     
 <!-- Подключение актуального EmailJS SDK (v3) -->
 <!-- Подключение актуального EmailJS SDK (v3) -->
+<!-- Подключение EmailJS и html2pdf -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     emailjs.init("lK76KGFPVwTGiY9vX");
@@ -611,6 +613,7 @@
 
   window.addElementRow = addElementRow;
 </script>
+
 
 
 
