--- a/index.html
+++ b/index.html
@@ -495,7 +495,18 @@
       visibleSection.style.display = "block";
     }
 
-    // Замена input/select/textarea
+    // Обработка .element-row перед удалением input'ов
+    clone.querySelectorAll(".element-row").forEach(row => {
+      const inputs = row.querySelectorAll("input");
+      const div = document.createElement("div");
+      if (inputs.length === 2) {
+        div.textContent = `${inputs[0].value || "—"} — ${inputs[1].value || "—"}`;
+        div.style.marginBottom = "4px";
+        row.replaceWith(div);
+      }
+    });
+
+    // Замена остальных input/select/textarea
     clone.querySelectorAll("input, select, textarea").forEach(el => {
       const div = document.createElement("div");
       if (el.type === "checkbox") {
@@ -506,18 +517,6 @@
         div.textContent = el.value || "—";
       }
       el.replaceWith(div);
-    });
-
-    // Обработка .element-row отдельно
-    document.querySelectorAll(".element-row").forEach(row => {
-      const inputs = row.querySelectorAll("input");
-      const container = clone.querySelector(`#${row.parentElement.id}`);
-      if (inputs.length === 2 && container) {
-        const div = document.createElement("div");
-        div.textContent = `${inputs[0].value || "—"} — ${inputs[1].value || "—"}`;
-        div.style.marginBottom = "4px";
-        container.appendChild(div);
-      }
     });
 
     clone.querySelectorAll("button").forEach(btn => btn.remove());
@@ -618,6 +617,7 @@
 
   window.addElementRow = addElementRow;
 </script>
+
 
 
 </body>
